# resin

./: .env  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  config.json  default.nix  flake.nix  test_api.sh
.pg/: client.sh
doc/: rust.md
docs/: rest.md  rust.md
example/: handler_save.rs
example/boilermates/: handlers.rs
example/client/: api.rs  types.rs
example/macros/: is_optional.rs
example/permissions/: Cargo.toml
example/permissions/src/: main.rs
example/resin-diesel/: .gitignore  Cargo.toml  README.md  default.nix  flake.nix
migrations/: 20230915204923_initial.sql  20230917091259_initial.sql  20231009133743_initial.sql  20231009140750_initial.sql  20231009163418_initial.sql
migrations-bak/2023-09-15-192644_users/: down.sql  up.sql
migrations/snapshot/: 0_empty.sql.bak  20230915204923_initial.sql.bak  20230915214341_initial.sql.bak
resin-macros/: Cargo.toml
resin-macros/src/: lib.rs
resin-macros/tests/: macros_test.rs  model_test.rs
src/: auth.rs  authorization_middleware.rs  error.rs  handlers.rs  layers.rs  main.rs  models.rs  resin_extensions.rs  router_extensions.rs  validation.rs
