[package]
name = "resin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5.0", features = ["trace"] }
axum = { version = "0.7", features = ["tracing"] }
axum-extra = "0.9"
axum-login = "0.15"
ormlite = { version = "0.17", features = ["postgres", "chrono", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
uuid = { version = "1.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde"] }
validator = { version = "0.16", features = ["derive"] }
thiserror = "1.0"
bitflags = "2.6.0"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.resin-macros]
path = "./resin-macros"
