[package]
name = "resin-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "fold", "extra-traits"] }
quote = "1.0"
darling = "0.20"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
