[package]
name = "permissions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
bitflags = "2.6.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
